--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.enja.videostreamingapp">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,14 +12,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.VIdeoStreamingApp"
         android:usesCleartextTraffic="true">
-
-        <activity android:name=".MainActivity"
-            android:configChanges="orientation|screenSize|layoutDirection">
+        <activity android:name=".Views.VideoRecyclerView">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:configChanges="orientation|screenSize|layoutDirection">
         </activity>
     </application>
 
